--- a/src/app/modules/cards/cards.component.html
+++ b/src/app/modules/cards/cards.component.html
@@ -83,7 +83,7 @@
             <mat-form-field appearance="outline">
               <div>
                 <mat-toolbar>
-                  <input [value]="selectedFileNames.length ? selectedFileNames : 'Select Signature PNG Images'"
+                  <input [value]="selectedFileNames.length ? selectedFileNames : 'Select Stamp PNG Images'"
                     matInput />
                 </mat-toolbar>
 
@@ -110,9 +110,10 @@
       <div class="col-md-12 px-3">
         <h4>Sample Card</h4>
       </div>
+
       <div class="col-md-3 text-center px-2" *ngFor="let data of userLists.slice(0,4); let i=index">
 
-        <div class="card text-center" [id]="data.email" style="height:54mm; width:86mm; border:1px solid #000;">
+        <div class="card text-center" style="height:54mm; width:86mm; border:1px solid #000;">
           <div class="row" style="padding:3px 0">
             <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
               <img height="70" src="../../../assets/logo.png" />
@@ -134,9 +135,7 @@
 
           <div class="row"
             style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
-            <!-- <barcode style=" height:20px; z-index:5555;" v-bind:value="barcodeValue">
-                Show this if the rendering fails.
-            </barcode> -->
+            <qrcode style="position: absolute !important; top: 152px;left: 140px;" [qrdata]="'Patron Id = '+ data.patron_id" [width]="50" [errorCorrectionLevel]="'M'"></qrcode>
             <div class="col-md-10" style="line-height: 1.5;">
               <div>Name: {{data.firstname}} {{data.surname}}</div>
               <div>Address: {{data.address}}</div>
@@ -144,11 +143,6 @@
               <div>Department: IT</div>
               <div>Phone: {{data.phone}}</div>
               <div>Issued On: {{data.date_enrolled}}
-                <div class="barcode">
-                  <!-- <barcode displayValue="false" style="margin: -28px 0 0 116px; !important;" height="15" width="1" v-bind:value="barcodeValue">
-                  Show this if the rendering fails.
-                </barcode> -->
-                </div>
               </div>
             </div>
             <div class="col-md-2">
@@ -167,14 +161,137 @@
         </div>
       </div>
     </div>
+
     <div class="row">
-      <div class="col-md-12 px-2">
-        <button class="btn btn-primary btn-sm" (click)="individualDownload()">Download All</button>
+      <div class="col-md-2 px-4">
+        <h3>Card Details</h3>
       </div>
 
+      <div class="col-md-6">
+        <button [disabled]="selection.selected.length < 1 || downloadLoading" (click)="individualDownload()" class="btn btn-sm btn-secondary">Download</button>
+      </div>
+    </div>
+    <div class="row px-4">
+      <mat-progress-bar *ngIf="downloadLoading" mode="indeterminate"></mat-progress-bar>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+      
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.patron_id}} </td>
+        </ng-container>
+      
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.firstname}} {{element.surname}} </td>
+        </ng-container>
+      
+        <!-- Weight Column -->
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef> Address </th>
+          <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        </ng-container>
+      
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
 
+        <ng-container matColumnDef="department">
+          <th mat-header-cell *matHeaderCellDef> Department </th>
+          <td mat-cell *matCellDef="let element"> IT </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef> Phone No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="issuedOn">
+          <th mat-header-cell *matHeaderCellDef> Issued On </th>
+          <td mat-cell *matCellDef="let element"> {{element.date_enrolled}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="selection.toggle(row)">
+        </tr>
+      </table>
+
+      <mat-paginator #paginator
+                 [pageSize]="5"
+                 [pageSizeOptions]="[3, 4, 5]">
+  </mat-paginator>
     </div>
   </mat-tab>
-  <mat-tab label="Portrait"> Portrait </mat-tab>
+  <!-- <mat-tab label="Portrait"> Portrait </mat-tab> -->
 </mat-tab-group>
+
+
+<div style="opacity: 0;" class="col-md-3 text-center px-2" *ngFor="let data of userLists; let i=index">
+
+  <div class="card text-center" [id]="data.userid" style="height:54mm; width:86mm; border:1px solid #000;">
+    <div class="row" style="padding:3px 0">
+      <div class="col-md-3 text-center" style="padding-top:10px; padding-left:15px">
+        <img height="70" src="../../../assets/logo.png" />
+      </div>
+      <div class="col-md-9" style="color:#0096c7; margin: 0 !important;padding: 0 !important;line-height: 1.5;">
+        <div style="font-weight:bold; font-size:12px; margin: 0; padding: 0;">{{universityName}}</div>
+        <div style="font-size:10px">{{department}}</div>
+        <div style="font-size:10px;">{{address}}</div>
+        <div style="font-size:10px; color:#000;margin: 0;padding: 0;">Email: {{email}}, URL:
+          {{url}}</div>
+        <div style="font-size:10px; color:#000">Phone no:{{phone}}</div>
+      </div>
+
+      <div class="col-md-12 text-center"
+        style="background-color:#023e8a; color:#fff; padding:2px 0; font-size:12px;">
+        <span style="text-transform:uppercase; letter-spacing: 3px;">PRIVATE</span>
+      </div>
+    </div>
+
+    <div class="row"
+      style="text-align:left; padding:0 10px; font-size:10px;font-family: Arial, Helvetica, sans-serif;">
+      <qrcode style="position: absolute !important; top: 152px;left: 140px;" [qrdata]="'Patron Id = '+ data.patron_id" [width]="50" [errorCorrectionLevel]="'M'"></qrcode>
+      <div class="col-md-10" style="line-height: 1.5;">
+        <div>Name: {{data.firstname}} {{data.surname}}</div>
+        <div>Address: {{data.address}}</div>
+        <div>Email: {{data.email}}</div>
+        <div>Department: IT</div>
+        <div>Phone: {{data.phone}}</div>
+        <div>Issued On: {{data.date_enrolled}}
+        </div>
+      </div>
+      <div class="col-md-2">
+        <img height="65" src="../../../assets/pp.jpg">
+        <img *ngFor='let signature of signatureImagePath' [src]="signature"
+          style="top: 151px;right: -8px;position: absolute;" height="50" />
+        <img height="100" style="top: 75px; right: 30px; position: absolute;"
+          *ngFor='let signature of stampImagePath' [src]="signature" />
+      </div>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <!-- <div class="col-md-12 text-center">
+      <button class="btn btn-primary btn-sm" (click)="individualDownload(data)">Download</button>
+    </div> -->
+  </div>
+</div>
